# expertiza

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example  main.html  nginx.conf  safaf.html
migrations/: 0001_initial.sql
src/: config.rs  csrf.rs  error.rs  logging.rs  main.rs  middleware.rs  redis_interface.rs  server.rs  state.rs
src/database/: mod.rs  setup.rs
src/database/postgres/: error.rs  mod.rs  models.rs  postgres_interface.rs
src/database/redis/: mod.rs  redis_interface.rs
src/routers/: error.rs  mod.rs
src/routers/admin/: api.rs  auth.rs  error.rs  mod.rs  web.rs
src/routers/client/: api.rs  web.rs
static/css/: admin_login.css  styles.css
static/css/admin/: main.css  utilities.css
static/css/admin/components/: modal.css  sidebar.css  stats.css  table.css
static/js/: admin_dashboard.js  api.js
static/js/admin/: README.md  app.js
static/js/admin/components/: AddClientModal.js  Pagination.js  SadebarBox.js  SearchBox.js  StatsPanel.js  SubmissionModal.js  SubmissionTable.js
static/js/admin/config/: constants.js
static/js/admin/controllers/: AdminDashboardController.js
static/js/admin/services/: apiService.js  notificationService.js
static/js/admin/stores/: submissionStore.js
static/js/admin/utils/: eventBus.js  index.js
static/js/client/: app.js
templates/: admin_login.html  main.html
templates/admin/: admin_dashboard.html  admin_login.html
