[package]
name = "expertiza"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6.6", features = ["compression-gzip", "cors", "timeout", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rand = { version = "0.9", features = ["std_rng"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
dotenv = "0.15.0"
bcrypt = "0.17.0"

[dev-dependencies]
tower-test = "0.4"
