[package]
name = "expertiza"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
axum-cookie = "0.2"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6.6", features = ["compression-gzip", "cors", "timeout", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = { version = "0.9", features = ["std_rng"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }
dotenv = "0.15.0"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "macros"
] }
thiserror = "2.0"
dotenvy = "0.15"